--- a/Audio Diary/Base.lproj/Main.storyboard
+++ b/Audio Diary/Base.lproj/Main.storyboard
@@ -148,17 +148,55 @@
             </objects>
             <point key="canvasLocation" x="1619" y="78"/>
         </scene>
-        <!--View Controller-->
+        <!--Detailed Recording View Controller-->
         <scene sceneID="Q4n-du-5Qa">
             <objects>
-                <viewController id="frV-5X-Tjn" sceneMemberID="viewController">
+                <viewController id="frV-5X-Tjn" customClass="DetailedRecordingViewController" customModule="AudioDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="p3R-Uh-014">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yZP-7v-pHV">
+                                <rect key="frame" x="10" y="140" width="394" height="673"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DUU-Xw-vkg">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="30"/>
+                                        <state key="normal" image="play.circle" catalog="system"/>
+                                        <connections>
+                                            <action selector="playButtonTapped:" destination="frV-5X-Tjn" eventType="touchUpInside" id="KM2-Ix-f3E"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QwS-Cd-Pgz">
+                                        <rect key="frame" x="0.0" y="30" width="394" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rb8-gj-7bO">
+                                        <rect key="frame" x="0.0" y="50.5" width="394" height="622.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="4XC-xf-4fR" firstAttribute="trailing" secondItem="yZP-7v-pHV" secondAttribute="trailing" constant="10" id="GLz-zQ-Ydw"/>
+                            <constraint firstItem="yZP-7v-pHV" firstAttribute="leading" secondItem="4XC-xf-4fR" secondAttribute="leading" constant="10" id="Oud-Ks-quI"/>
+                            <constraint firstItem="yZP-7v-pHV" firstAttribute="top" secondItem="4XC-xf-4fR" secondAttribute="top" id="bN2-yi-waB"/>
+                            <constraint firstItem="4XC-xf-4fR" firstAttribute="bottom" secondItem="yZP-7v-pHV" secondAttribute="bottom" id="dg5-eR-slD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4XC-xf-4fR"/>
                     </view>
                     <navigationItem key="navigationItem" id="HZo-lx-TxS"/>
+                    <connections>
+                        <outlet property="titleLabel" destination="QwS-Cd-Pgz" id="Hvj-jV-ugG"/>
+                        <outlet property="transcribedText" destination="Rb8-gj-7bO" id="FBX-Bv-a9A"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kxV-OC-vll" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -187,6 +225,7 @@
     <resources>
         <image name="chart.pie.fill" catalog="system" width="128" height="124"/>
         <image name="folder" catalog="system" width="128" height="95"/>
+        <image name="play.circle" catalog="system" width="128" height="121"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="stop.circle" catalog="system" width="128" height="121"/>
     </resources>
