coreML model for sentiment analysis hooked to transcribed text and saved to core data database and displayed in audio item detail view

--- a/Audio Diary/Base.lproj/Main.storyboard
+++ b/Audio Diary/Base.lproj/Main.storyboard
@@ -156,24 +156,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yZP-7v-pHV">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="yZP-7v-pHV">
                                 <rect key="frame" x="10" y="140" width="394" height="673"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DUU-Xw-vkg">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="22"/>
                                         <state key="normal" image="play.circle" catalog="system"/>
                                         <connections>
                                             <action selector="playButtonTapped:" destination="frV-5X-Tjn" eventType="touchUpInside" id="KM2-Ix-f3E"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QwS-Cd-Pgz">
-                                        <rect key="frame" x="0.0" y="30" width="394" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="37" width="394" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Positive: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I69-AF-K8w">
+                                        <rect key="frame" x="0.0" y="72.5" width="394" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Negative:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QbL-3O-pLL">
+                                        <rect key="frame" x="0.0" y="108" width="394" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rb8-gj-7bO">
-                                        <rect key="frame" x="0.0" y="50.5" width="394" height="622.5"/>
+                                        <rect key="frame" x="0.0" y="143.5" width="394" height="529.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -194,6 +206,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="HZo-lx-TxS"/>
                     <connections>
+                        <outlet property="negativeLabel" destination="QbL-3O-pLL" id="dSU-1q-n4c"/>
+                        <outlet property="positiveLabel" destination="I69-AF-K8w" id="c4V-1E-bro"/>
                         <outlet property="titleLabel" destination="QwS-Cd-Pgz" id="Hvj-jV-ugG"/>
                         <outlet property="transcribedText" destination="Rb8-gj-7bO" id="FBX-Bv-a9A"/>
                     </connections>
