--- a/Audio Diary/Base.lproj/Main.storyboard
+++ b/Audio Diary/Base.lproj/Main.storyboard
@@ -117,47 +117,60 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="recordedItem" id="Hxx-kq-ezS" customClass="RecordedItemTableViewCell" customModule="AudioDiary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="80.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="90.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hxx-kq-ezS" id="BdJ-Dk-exm">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="90.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gKu-P8-n1H">
-                                                    <rect key="frame" x="10" y="10" width="394" height="60.5"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gcM-gd-ASj">
+                                                    <rect key="frame" x="5" y="5" width="404" height="80.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vux-w2-EHi">
-                                                            <rect key="frame" x="0.0" y="0.0" width="394" height="24.5"/>
-                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="excerpt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJM-kn-ooe">
-                                                            <rect key="frame" x="0.0" y="39.5" width="394" height="21"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="21" id="S5P-7k-iw6"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gKu-P8-n1H">
+                                                            <rect key="frame" x="10" y="10" width="384" height="60.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vux-w2-EHi">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="384" height="24.5"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="excerpt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJM-kn-ooe">
+                                                                    <rect key="frame" x="0.0" y="39.5" width="384" height="21"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="21" id="S5P-7k-iw6"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </stackView>
                                                     </subviews>
-                                                    <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </stackView>
+                                                    <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="gKu-P8-n1H" firstAttribute="top" secondItem="gcM-gd-ASj" secondAttribute="top" constant="10" id="2jz-Ak-dwa"/>
+                                                        <constraint firstAttribute="bottom" secondItem="gKu-P8-n1H" secondAttribute="bottom" constant="10" id="Nl7-aF-H8E"/>
+                                                        <constraint firstAttribute="trailing" secondItem="gKu-P8-n1H" secondAttribute="trailing" constant="10" id="QK2-zs-EMd"/>
+                                                        <constraint firstItem="gKu-P8-n1H" firstAttribute="leading" secondItem="gcM-gd-ASj" secondAttribute="leading" constant="10" id="guR-CL-H3e"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="gKu-P8-n1H" firstAttribute="leading" secondItem="BdJ-Dk-exm" secondAttribute="leading" constant="10" id="B9X-Jn-Abi"/>
-                                                <constraint firstItem="gKu-P8-n1H" firstAttribute="top" secondItem="BdJ-Dk-exm" secondAttribute="top" constant="10" id="FHM-dQ-zhK"/>
-                                                <constraint firstAttribute="trailing" secondItem="gKu-P8-n1H" secondAttribute="trailing" constant="10" id="GrX-cy-Q9T"/>
-                                                <constraint firstAttribute="bottom" secondItem="gKu-P8-n1H" secondAttribute="bottom" constant="10" id="Wks-sP-Vnf"/>
+                                                <constraint firstItem="gcM-gd-ASj" firstAttribute="leading" secondItem="BdJ-Dk-exm" secondAttribute="leading" constant="5" id="Kxj-oW-LR5"/>
+                                                <constraint firstAttribute="trailing" secondItem="gcM-gd-ASj" secondAttribute="trailing" constant="5" id="SdO-C5-QRc"/>
+                                                <constraint firstItem="gcM-gd-ASj" firstAttribute="top" secondItem="BdJ-Dk-exm" secondAttribute="top" constant="5" id="eE9-bC-hbF"/>
+                                                <constraint firstAttribute="bottom" secondItem="gcM-gd-ASj" secondAttribute="bottom" constant="5" id="vD0-Pf-Ak4"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="dateLabel" destination="Vux-w2-EHi" id="QxN-ON-QHb"/>
                                             <outlet property="excerptLabel" destination="KJM-kn-ooe" id="3MD-hN-7FR"/>
+                                            <outlet property="mainCellHolder" destination="gcM-gd-ASj" id="8g9-68-0VB"/>
                                             <segue destination="frV-5X-Tjn" kind="show" id="JHu-0X-Dpy"/>
                                         </connections>
                                     </tableViewCell>
